--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <title>React App</title>
   </head>
   <body>
-    <main id="root" class="container">
+    <main id="root" class="container-root">
 
 
     </main>
